--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-PORT=7000
-MONGO_URI= mongodb://root:364133Rrock.!@4.247.130.17:27017/jtk?authSource=admin
+PORT=8010
+MONGO_URI= mongodb://root:364133Rrock.!@4.247.130.17:27017/comm-jtk?authSource=admin
 DEPLOY_ENV = local
 SSL_CRT_PATH=/etc/letsencrypt/live/learn.orbittechnologys.com/fullchain.pem
 SSL_KEY_PATH=/etc/letsencrypt/live/learn.orbittechnologys.com/privkey.pem
